# gepetto-viewer-rerun

./: .gitignore  .mergify.yml  .pre-commit-config.yaml  README.md  default.nix  flake.nix  hello.py  main.py  patched-nixpkgs.nix  pyproject.toml
.github/workflows/: nix.yml  update-flake-lock.yml  uv.yml
examples/: basic_geometries.py
src/: client.py  entity.py  scene.py
src/gepetto_viewer_rerun/: __init__.py  archetype.py  client.py  entity.py  scene.py
tests/: test_client.py
