[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "pre-commit>=4.0.1"
]

[project]
name = "gepetto-viewer-rerun"
version = "0.1.0"
description = "Provide a `Client` class to visualize data with Rerun"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "rerun>=1.0.30"
]
